# blog_homography

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/: DSC02719.txt  DSC02721.txt
src/: filesystem_util.cc  homography.cc
